[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/StartPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/Changa-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 2 )

[node name="StartPanel" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Points" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -7.5
margin_right = 7.5
margin_bottom = 97.0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.380392, 0.972549, 1 )
text = "0
"
align = 1
valign = 1
max_lines_visible = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -18.0
margin_right = 137.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bored Bubble"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.729
anchor_right = 0.5
anchor_bottom = 0.729
margin_left = -80.0
margin_top = -26.5388
margin_right = 86.0
margin_bottom = 31.4612
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Level" type="Label" parent="."]
margin_right = 48.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "level:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="."]
margin_left = 48.0
margin_top = 4.0
margin_right = 86.0
margin_bottom = 44.0
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
